# 11

./: BUILD.gn  README.md  project_struct.txt  核心代码实现.md  系统架构和模块关系.md  项目开发路径.md  项目概述和功能介绍.md
include/: main.h
include/business/: alarm.h
include/config/: config.h
include/control/: smart_controller.h
include/data/: data_collector.h
include/drivers/display/: oled.h
include/drivers/output/: buzzer.h  led.h  relay.h
include/drivers/sensor/: bh1750.h  dht11.h  mq2.h  sensor.h
include/network/: mqtt_client.h  wifi_manager.h
include/state/: state_manager.h
src/: main.c
src/business/: alarm.c
src/config/: config.c
src/control/: smart_controller.c
src/data/: data_collector.c
src/drivers/display/: oled.c
src/drivers/output/: buzzer.c  led.c  relay.c
src/drivers/sensor/: bh1750.c  dht11.c  mq2.c
src/network/: mqtt_client.c  wifi_manager.c
src/state/: state_manager.c
test/business/: alarm_test.c
test/control/: smart_controller_test.c
test/data/: data_collector_test.c
test/driver_test/: bh1750_test.c  buzzer_test.c  dht11_test.c  led_test.c  mq2_test.c  oled_test.c  relay_test.c
test/network/: mqtt_client_test.c  wifi_manager_test.c
